# data-split

./: .gitignore  pyproject.toml
src/: split.py
